--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,15 @@ input[type='number'] {
   height: 38px;
 }
 
+.Alert {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  text-align: center;
+}
+
 .city {
   width: 250px;
 }
@@ -79,7 +88,7 @@ input[type='number'] {
 .NumberOfEvents {
   margin-left: 10px;
   padding: 10px;
-  align-self: left;
+  align-self: center;
 }
 
 .event {
