--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,24 @@ input[type='number'] {
   height: 38px;
 }
 
-.Alert {
+.InfoAlert {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 10px;
+  left: 10px;
   width: 300px;
   text-align: center;
+  margin-bottom: 10px;
+  color: blue;
+}
+
+.ErrorAlert {
+  position: fixed;
+  top: 60px;
+  left: 10px;
+  width: 300px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: red;
 }
 
 .city {
