--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ input[type='number'] {
   text-align: center;
   margin-bottom: 10px;
   color: blue;
+  z-index: 9000;
 }
 
 .ErrorAlert {
@@ -59,6 +60,18 @@ input[type='number'] {
   text-align: center;
   margin-bottom: 10px;
   color: red;
+  z-index: 9000;
+}
+
+.WarningAlert {
+  position: fixed;
+  top: 90px;
+  left: 10px;
+  width: 300px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: orange;
+  z-index: 9000;
 }
 
 .city {
